--- a/style.css
+++ b/style.css
@@ -8,19 +8,19 @@ body {
     color: 333;
     line-height: 1.6;
 }
-.navbar {
+.container {
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
 }
 header {
-    background-color:#fcf1ed;
+    background-color: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
     z-index: 100;
 }
-.header-navbar {
+.header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -59,4 +59,38 @@ nav a:hover {
 }
 .cta-button:hover {
 background-color: #ffbea6;
+}
+.hero {
+    padding: 96px 0;
+    background-color: #fcf1ed;
+}
+.hero-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.hero-content {
+    flex: 1;
+    padding-right: 32px;
+}
+.hero-image {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hero-image img {
+    max-width: 100%;
+    height: auto;
+}
+.hero h1 {
+    font-size: 48px; 
+    font-weight: 800;
+    margin-bottom: 24px; 
+    color: #8f2600;
+}
+.hero p {
+    font-size: 19.2px; 
+    margin-bottom: 32px; 
+    color: #555;
 }
