--- a/style.css
+++ b/style.css
@@ -96,4 +96,47 @@ background-color: #ffbea6;
 }
 .features {
     padding: 80px 0;
+    background-color: white;
+}
+.section-title {
+    text-align: center;
+    margin-bottom: 48px;
+}
+.section-title h2 {
+    font-size: 40px;
+    color: #8f2600;
+    margin-bottom: 16px;
+}
+.section-title p {
+    font-size: 16px;
+    color: #555;
+    margin: 0 auto;
+}
+.features-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 32px;
+}
+.feature-box {
+    flex: 1;
+    min-width: 300px;
+    background-color: #fcf1ed;
+    border-radius: 12px;
+    padding: 32px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+.feature-box:hover {
+transform: translateY(-10px);
+box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+.feature-icon {
+    font-size: 30px;
+   margin-bottom: 24px;
+}
+.feature-box h3 {
+    font-size: 20px;
+    margin-bottom: 16px;
+    color: #8f2600;
 }
