--- a/style.css
+++ b/style.css
@@ -140,3 +140,31 @@ box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     margin-bottom: 16px;
     color: #8f2600;
 }
+
+.cta-section {
+    padding: 60px 0;
+    background-color:#fcf1ed;
+    text-align: center;
+    color: #8f2600;
+}
+.cta-section h2 {
+    font-size: 30px;
+    margin-bottom: 16px;
+}
+.cta-section p {
+    font-size: 18px;
+    margin-bottom: 16px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 650px;
+}
+
+.cta-section .cta-button {
+    background-color: #8f2600;
+    color: #fcf1ed;
+    padding: 14px 28px;
+    font-size: 18px;
+}
+.cta-section .cta-button:hover {
+    background-color: #ff9a75;
+}
